--- a/BasicProject/MvcAngular.Web/Web.config
+++ b/BasicProject/MvcAngular.Web/Web.config
@@ -26,6 +26,9 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <customErrors mode="On">
+      <error statusCode="404" redirect="404.html" />
+    </customErrors>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
