Ignoring .idea folder.

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ SimpleRouting/MvcAngular.Web/bin/
 SimpleRouting/MvcAngular.Web/obj/
 CRUDOperations/MvcAngular.Web/bin/
 CRUDOperations/MvcAngular.Web/obj/
+/.idea
